starting menu created